deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    app.kubernetes.io/name: devsecops-cicd-platform
    app.kubernetes.io/part-of: devsecops-cicd-platform
